# smallm

./: .gitignore  CLAUDE.md  LEARN.md  README.md  config.py  convert-quantization.py  pyproject.toml  test-chat.py  test-model.py  train-model.py  train-tokenizer.py  upload-huggingface.py
rust-bpe-tokenizer/: Cargo.toml  pyproject.toml
rust-bpe-tokenizer/src/: lib.rs
scripts/: train_model.py  train_tokenizer.py
src/smallm/: __init__.py
src/smallm/data/: __init__.py  core.py  dataset.py  mixed.py  registry.py  streaming.py
src/smallm/data/loaders/: __init__.py  base.py  openwebtext.py  tinystories.py  wikitext.py
src/smallm/model/: __init__.py  attention.py  block.py  config.py  ffn.py  llama.py  norm.py  rope.py
src/smallm/quantization/: __init__.py  fp16.py  int8.py  loader.py  utils.py
src/smallm/tokenizer/: __init__.py  base.py  bpe.py  bpe_optimized.py  bpe_rust.py  regex_bpe.py
src/smallm/training/: __init__.py  checkpoint.py  trainer.py  ui.py
tokenizer/: tokenizer.model  tokenizer.vocab
