[project]
name = "smallm"
version = "0.1.0"
description = "A minimal LLaMA-style LLM for learning purposes"
readme = "README.md"
authors = [
    { name = "egoavara", email = "egoavara@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "regex>=2024.0.0",
    "datasets>=3.0.0",
    "tqdm>=4.66.0",
    "ipywidgets>=8.1.8",
    "ipykernel>=7.1.0",
    "numba>=0.63.1",
    "maturin>=1.10.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "maturin>=1.10.2",
    "pytest>=8.0.0",
]
