[package]
name = "rust_bpe_tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bpe_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
fancy-regex = "0.14"
ahash = "0.8"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
